[package]
name = "sui-trace-server"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
tokio.workspace = true
serde.workspace = true
prometheus.workspace = true
mysten-metrics.workspace = true
telemetry-subscribers.workspace = true
tracing.workspace = true
sui-replay.workspace = true
tracing-subscriber = "0.3.17"

[dev-dependencies]
tower.workspace = true
serde_json.workspace = true
